--- a/src/Credible Spider.vcxproj.filters
+++ b/src/Credible Spider.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="LayerStyle.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="RectShadow.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Poker\Poker.h">
@@ -222,6 +225,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="LayerStyle.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="RectShadow.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
